modularized twitter bot

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Stanley Yang",
   "license": "ISC",
   "dependencies": {
+    "debug": "^2.2.0",
     "dotenv": "^1.2.0",
     "twit": "^2.0.0"
   }
